--- a/main.css
+++ b/main.css
@@ -4,7 +4,13 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: hsl(0, 0%, 90%);
+    /* background-color: hsl(0, 0%, 90%); */
+    background-image: url(images/skybg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 100vh;
 }
 #appName{
     margin-top: 15px;
@@ -27,14 +33,16 @@ button[type="submit"]{
     border-radius: 5px;
     color: white;
     background-color: hsl(9, 100%, 64%);
+    cursor: pointer;
 }
 button[type="submit"]:hover{
     background-color: hsl(9, 100%, 54%);
 }
 .weatherCard{
     background: linear-gradient(180deg, white, hsl(240, 42%, 44%));
+    opacity: 75%;
     padding: 35px;
-    margin-top: 20px;
+    margin-top: 40px;
     border-radius: 15px;
     box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.599);
     min-width: 300px;
